# decimation

./: CMakeLists.txt  README.md
src/: Decimate.cpp  Decimate.h  HashCode.h  KnowledgeBase.h  Loader.cpp  Loader.h  TreeKnowledgeBase.cpp  TreeNode.cpp  TreeNode.h  VectorKnowledgeBase.cpp
